--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Speak with Counsellor
             </a>
             <p style="margin: 0;">
-                📞 <a href="tel:+919022330753" class="phone-link">+91 98765 43210</a>
+                📞 <a href="tel:+919022330753" class="phone-link">+91 9022330753</a>
             </p>
         </div>
 
@@ -141,7 +141,7 @@
             <div class="footer-section">
                 <h3>Contact Us</h3>
                 <p><strong>Phone:</strong> +91 9022330753</p>
-                <p><strong>Email:</strong> brightstep@gmail.com</p>
+                <p><strong>Email:</strong> brightstepadmissions@gmail.com</p>
                 <p><strong>Office:</strong> Hadapsar, Pune, Maharashtra</p>
             </div>
         </div>
