--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
             <a href="programs.html">Programs</a>
+            <a href="undergraduate.html">Undergraduate</a>
             <a href="#" onclick="document.getElementById('popupForm').style.display='block'">Apply Now</a>
             <a href="#contact">Contact</a>
         </nav>
