--- a/index.html
+++ b/index.html
@@ -55,17 +55,20 @@
             partner for modern, flexible, and meaningful education in India.</p>
     </section>
 
-    <section class="programs" id="programs">
-        <h2>Our Programs</h2>
-        <div class="grid">
+   <section class="programs" id="programs">
+    <h2>Our Programs</h2>
+    <div class="grid">
+        <a href="undergraduate.html" class="card-link">
             <div class="card">
-                <img src="https://plus.unsplash.com/premium_photo-1682125773446-259ce64f9dd7?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZWR1Y2F0aW9ufGVufDB8fDB8fHww"
-                    alt="Undergraduate">
+                <img src="https://plus.unsplash.com/premium_photo-1682125773446-259ce64f9dd7?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZWR1Y2F0aW9ufGVufDB8fDB8fHww" alt="Undergraduate">
                 <div class="card-content">
                     <h3>Undergraduate</h3>
                 </div>
             </div>
-            <div class="card">
+        </a>
+    </div>
+</section>
+        <div class="card">
                 <img src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cG9zdCUyMGdyYWR1YXRlfGVufDB8fDB8fHww"
                     alt="Postgraduate">
                 <div class="card-content">
