--- a/index.html
+++ b/index.html
@@ -56,41 +56,47 @@
     </section>
 
    <section class="programs" id="programs">
-    <h2>Our Programs</h2>
-    <div class="grid">
-        <a href="undergraduate.html" class="card-link">
-            <div class="card">
-                <img src="https://plus.unsplash.com/premium_photo-1682125773446-259ce64f9dd7?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZWR1Y2F0aW9ufGVufDB8fDB8fHww" alt="Undergraduate">
-                <div class="card-content">
-                    <h3>Undergraduate</h3>
-                </div>
-            </div>
-        </a>
-    </div>
-</section>
-        <div class="card">
-                <img src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cG9zdCUyMGdyYWR1YXRlfGVufDB8fDB8fHww"
-                    alt="Postgraduate">
-                <div class="card-content">
-                    <h3>Postgraduate</h3>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://media.istockphoto.com/id/1942946172/photo/mba-master-of-business-administrations-learning-journey-through-e-learning-education-and.jpg?s=612x612&w=0&k=20&c=iGOcVvxy38HVtgdjgFbOCQq6FXpndcMxE-46idH4q9E="
-                    alt="Online MBA">
-                <div class="card-content">
-                    <h3>Online MBA</h3>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://media.istockphoto.com/id/1364946137/photo/businessman-holding-and-showing-the-best-quality-assurance-with-golden-five-stars-for.jpg?s=612x612&w=0&k=20&c=ewqI36IOI0FE9fQGEjhVrdR_4sAg77ICJJ2gZgZxH-0="
-                    alt="Certificates">
-                <div class="card-content">
-                    <h3>Certificates</h3>
-                </div>
-            </div>
+  <h2>Our Programs</h2>
+  <div class="grid">
+
+    <a href="undergraduate.html" class="card-link">
+      <div class="card">
+        <img src="https://plus.unsplash.com/premium_photo-1682125773446-259ce64f9dd7?w=600&auto=format&fit=crop&q=60" alt="Undergraduate">
+        <div class="card-content">
+          <h3>Undergraduate</h3>
         </div>
-    </section>
+      </div>
+    </a>
+
+    <a href="postgraduate.html" class="card-link">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1600880292089-90a7e086ee8a?w=600&auto=format&fit=crop&q=60" alt="Postgraduate">
+        <div class="card-content">
+          <h3>Postgraduate</h3>
+        </div>
+      </div>
+    </a>
+
+    <a href="mba.html" class="card-link">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1591696331119-fc2c3c8e6dfb?w=600&auto=format&fit=crop&q=60" alt="Online MBA">
+        <div class="card-content">
+          <h3>Online MBA</h3>
+        </div>
+      </div>
+    </a>
+
+    <a href="certifications.html" class="card-link">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1629909613657-17f38357f2c4?w=600&auto=format&fit=crop&q=60" alt="Certificates">
+        <div class="card-content">
+          <h3>Certificates</h3>
+        </div>
+      </div>
+    </a>
+
+  </div>
+</section>
 
     <section class="section careers" id="careers">
         <h2>Careers & Placements</h2>
