--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <a href="postgraduate.html" class="card-link">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1600880292089-90a7e086ee8a?w=600&auto=format&fit=crop&q=60" alt="Postgraduate">
+        <img src="https://img.freepik.com/free-photo/students-throwing-graduation-caps-air_53876-132902.jpg?w=826" alt="Postgraduate">
         <div class="card-content">
           <h3>Postgraduate</h3>
         </div>
@@ -79,7 +79,7 @@
 
     <a href="mba.html" class="card-link">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1591696331119-fc2c3c8e6dfb?w=600&auto=format&fit=crop&q=60" alt="Online MBA">
+        <img src="https://img.freepik.com/premium-photo/mba-master-business-administration-certificate-program-concept_220873-3029.jpg?w=826" alt="Online MBA">
         <div class="card-content">
           <h3>Online MBA</h3>
         </div>
@@ -88,7 +88,7 @@
 
     <a href="certifications.html" class="card-link">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1629909613657-17f38357f2c4?w=600&auto=format&fit=crop&q=60" alt="Certificates">
+        <img src="https://img.freepik.com/free-photo/standard-quality-control-concept-m_23-2150041852.jpg?w=826" alt="Certificates">
         <div class="card-content">
           <h3>Certificates</h3>
         </div>
