--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 
     <a href="postgraduate.html" class="card-link">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/students-throwing-graduation-caps-air_53876-132902.jpg?w=826" alt="Postgraduate">
+        <img src="https://plus.unsplash.com/premium_photo-1682974403683-591557aa631b?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8cG9zdCUyMGdyYWR1YXRlfGVufDB8fDB8fHww"
+                    alt="Postgraduate">
         <div class="card-content">
           <h3>Postgraduate</h3>
         </div>
