--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
 
     <a href="mba.html" class="card-link">
       <div class="card">
-        <img src="https://img.freepik.com/premium-photo/mba-master-business-administration-certificate-program-concept_220873-3029.jpg?w=826" alt="Online MBA">
+        <img src="https://media.istockphoto.com/id/1942946172/photo/mba-master-of-business-administrations-learning-journey-through-e-learning-education-and.jpg?s=612x612&w=0&k=20&c=iGOcVvxy38HVtgdjgFbOCQq6FXpndcMxE-46idH4q9E="
+                    alt="Online MBA">
+
         <div class="card-content">
           <h3>Online MBA</h3>
         </div>
@@ -89,7 +91,9 @@
 
     <a href="certifications.html" class="card-link">
       <div class="card">
-        <img src="https://img.freepik.com/free-photo/standard-quality-control-concept-m_23-2150041852.jpg?w=826" alt="Certificates">
+        <img src="https://media.istockphoto.com/id/1364946137/photo/businessman-holding-and-showing-the-best-quality-assurance-with-golden-five-stars-for.jpg?s=612x612&w=0&k=20&c=ewqI36IOI0FE9fQGEjhVrdR_4sAg77ICJJ2gZgZxH-0="
+                    alt="Certificates">
+
         <div class="card-content">
           <h3>Certificates</h3>
         </div>
