--- a/mba.html
+++ b/mba.html
@@ -7,15 +7,17 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 30px;
+      margin: 0;
+      padding: 0;
       background: #f9f9f9;
     }
     .container {
       background: white;
       max-width: 800px;
-      margin: auto;
+      margin: 40px auto;
       padding: 20px;
       border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     h1 {
       text-align: center;
@@ -33,9 +35,40 @@
     hr {
       margin: 30px 0;
     }
+    a { text-decoration: none; }
   </style>
 </head>
 <body>
+
+  <!-- ✅ HEADER START -->
+  <header style="background-color: #0a3d62; padding: 10px 0; color: white;">
+    <div style="display: flex; align-items: center; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
+      <!-- Logo and Name -->
+      <div style="display: flex; align-items: center;">
+        <img src="logo.png" alt="Brightstep Logo" style="height: 50px; margin-right: 10px;">
+        <h2 style="margin: 0;">Brightstep<br>Education</h2>
+      </div>
+
+      <!-- Navigation Menu -->
+      <nav style="display: flex; gap: 20px; align-items: center;">
+        <a href="index.html" style="color: white;">Home</a>
+        <a href="about.html" style="color: white;">About Us</a>
+        <a href="programs.html" style="color: white;">Programs</a>
+        <a href="apply.html" style="color: white;">Apply Now</a>
+        <a href="contact.html" style="color: white;">Contact</a>
+        <a href="https://wa.me/919022330753" style="background-color: #f39c12; color: white; padding: 8px 14px; border-radius: 5px;">Speak with Counsellor</a>
+      </nav>
+
+      <!-- Phone -->
+      <div style="display: flex; align-items: center; gap: 5px; color: #f39c12; font-weight: bold;">
+        <span>📞</span>
+        <a href="tel:+919022330753" style="color: #f39c12;">+91 9022330753</a>
+      </div>
+    </div>
+  </header>
+  <!-- ✅ HEADER END -->
+
+  <!-- Content Starts -->
   <div class="container">
     <h1>MBA Programs</h1>
 
@@ -64,5 +97,6 @@
       <p><strong>Focus:</strong> IT Project Management, Systems Analysis</p>
     </div>
   </div>
+
 </body>
 </html>
