--- a/postgraduate.html
+++ b/postgraduate.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Postgraduate Programs | Brightstep Education</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Undergraduate Programs – Brightstep Education</title>
+  <link rel="stylesheet" href="styles.css" />
   <style>
-    body
-<header style="background-color: #0a3d62; padding: 10px 0; color: white;">
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
+    .container { max-width: 1000px; margin: 40px auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+    h1 { color: #0a3d62; text-align: center; margin-bottom: 20px; }
+    .course { margin-bottom: 30px; padding-bottom: 20px; border-bottom: 1px solid #ddd; }
+    .course h2 { color: #f39c12; margin-bottom: 8px; }
+    .course p { margin: 6px 0; line-height: 1.5; }
+    .enquire-btn { background: #0a3d62; color: white; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; display: inline-block; margin-top: 10px; }
+    .enquire-btn:hover { background: #062a45; }
+  </style>
+</head>
+<body>
+  <header style="background-color: #0a3d62; padding: 10px 0; color: white;">
   <div style="display: flex; align-items: center; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
     <!-- Logo and Name -->
     <div style="display: flex; align-items: center;">
@@ -32,51 +42,7 @@
     </div>
   </div>
 </header>
- {
-      font-family: Arial, sans-serif;
-      background-color: #f6f8fa;
-      margin: 0;
-      padding: 0;
-    }
 
-    .container {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-
-    h1 {
-      text-align: center;
-      color: #0a3d62;
-      margin-bottom: 30px;
-    }
-
-    .course {
-      margin-bottom: 30px;
-    }
-
-    .course-title {
-      color: #f39c12;
-      font-weight: bold;
-      font-size: 20px;
-    }
-
-    .course-details {
-      margin-top: 8px;
-      line-height: 1.6;
-    }
-
-    hr {
-      margin-top: 30px;
-      border: none;
-      border-top: 1px solid #ddd;
-    }
-  </style>
-</head>
-<body>
 
   <div class="container">
     <h1>Postgraduate Programs</h1>
