--- a/postgraduate.html
+++ b/postgraduate.html
@@ -6,15 +6,36 @@
   <title>Undergraduate Programs – Brightstep Education</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
-    .container { max-width: 1000px; margin: 40px auto; padding: 20px; background: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-    h1 { color: #0a3d62; text-align: center; margin-bottom: 20px; }
-    .course { margin-bottom: 30px; padding-bottom: 20px; border-bottom: 1px solid #ddd; }
-    .course h2 { color: #f39c12; margin-bottom: 8px; }
-    .course p { margin: 6px 0; line-height: 1.5; }
-    .enquire-btn { background: #0a3d62; color: white; padding: 10px 20px; border: none; border-radius: 5px; text-decoration: none; display: inline-block; margin-top: 10px; }
-    .enquire-btn:hover { background: #062a45; }
+    body {
+      font-family: Arial, sans-serif;
+      padding: 30px;
+      background: #f9f9f9;
+    }
+    .container {
+      background: white;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      border-radius: 10px;
+    }
+    h1 {
+      text-align: center;
+      color: #0a3d62;
+    }
+    .program {
+      margin-bottom: 30px;
+    }
+    .program h2 {
+      color: #f39c12;
+    }
+    .program p {
+      margin: 5px 0;
+    }
+    hr {
+      margin: 30px 0;
+    }
   </style>
+
 </head>
 <body>
   <header style="background-color: #0a3d62; padding: 10px 0; color: white;">
