--- a/postgraduate.html
+++ b/postgraduate.html
@@ -2,41 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Undergraduate Programs – Brightstep Education</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Postgraduate Programs | Brightstep Education</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 30px;
-      background: #f9f9f9;
+      background-color: #f6f8fa;
+      margin: 0;
+      padding: 0;
     }
+
     .container {
-      background: white;
-      max-width: 800px;
-      margin: auto;
+      max-width: 900px;
+      margin: 40px auto;
       padding: 20px;
-      border-radius: 10px;
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
+
     h1 {
       text-align: center;
       color: #0a3d62;
-    }
-    .program {
       margin-bottom: 30px;
     }
-    .program h2 {
+
+    .course {
+      margin-bottom: 30px;
+    }
+
+    .course-title {
       color: #f39c12;
+      font-weight: bold;
+      font-size: 20px;
     }
-    .program p {
-      margin: 5px 0;
+
+    .course-details {
+      margin-top: 8px;
+      line-height: 1.6;
     }
+
     hr {
-      margin: 30px 0;
+      margin-top: 30px;
+      border: none;
+      border-top: 1px solid #ddd;
     }
   </style>
-
 </head>
+<body>
 <body>
   <header style="background-color: #0a3d62; padding: 10px 0; color: white;">
   <div style="display: flex; align-items: center; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
@@ -63,6 +77,8 @@
     </div>
   </div>
 </header>
+
+
 
 
   <div class="container">
