--- a/mba.html
+++ b/mba.html
@@ -39,6 +39,32 @@
   </style>
 </head>
 <body>
+<body>
+  <header style="background-color: #0a3d62; padding: 10px 0; color: white;">
+  <div style="display: flex; align-items: center; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
+    <!-- Logo and Name -->
+    <div style="display: flex; align-items: center;">
+      <img src="logo.png" alt="Brightstep Logo" style="height: 50px; margin-right: 10px;">
+      <h2 style="margin: 0;">Brightstep<br>Education</h2>
+    </div>
+
+    <!-- Navigation Menu -->
+    <nav style="display: flex; gap: 20px; align-items: center;">
+      <a href="index.html" style="color: white; text-decoration: none;">Home</a>
+      <a href="about.html" style="color: white; text-decoration: none;">About Us</a>
+      <a href="programs.html" style="color: white; text-decoration: none;">Programs</a>
+      <a href="apply.html" style="color: white; text-decoration: none;">Apply Now</a>
+      <a href="contact.html" style="color: white; text-decoration: none;">Contact</a>
+      <a href="https://wa.me/919022330753" style="background-color: #f39c12; color: white; padding: 8px 14px; border-radius: 5px; text-decoration: none;">Speak with Counsellor</a>
+    </nav>
+
+    <!-- Phone -->
+    <div style="display: flex; align-items: center; gap: 5px; color: #f39c12; font-weight: bold;">
+      <span>📞</span>
+      <a href="tel:+919022330753" style="color: #f39c12; text-decoration: none;">+91 9022330753</a>
+    </div>
+  </div>
+</header>
 
   <!-- ✅ HEADER START -->
   <header style="background-color: #0a3d62; padding: 10px 0; color: white;">
