--- a/certifications.html
+++ b/certifications.html
@@ -41,7 +41,7 @@
   <div style="display: flex; align-items: center; justify-content: space-between; max-width: 1200px; margin: auto; padding: 0 20px;">
     <!-- Logo and Name -->
     <div style="display: flex; align-items: center;">
-      <img src="logo.png" alt="Brightstep Logo" style="height: 50px; margin-right: 10px;">
+      <img src="logo.jpeg" alt="Brightstep Logo" style="height: 50px; margin-right: 10px;">
       <h2 style="margin: 0;">Brightstep<br>Education</h2>
     </div>
 
